serial GC fails "assert(Universe::on_page_boundary(bottom) && Universe::on_page_boundary(end)) failed: invalid space boundaries"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 21
    • Affects Version/s: 21
    • Component/s: hotspot
    • gc
    • b19
    • aarch64
    • Verified

      The following test failed in the JDK21 CI:

      gc/arguments/TestShrinkHeapInSteps.java

      Here's a snippet from the log file:

      ----------System.err:(36/2620)----------
       stdout: [0.1 0.9499280011212384 0.8
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S30439/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/53c76be7-7b76-4ae1-b310-5e02403f83b6/runs/05e923eb-7110-443a-9c41-20ccdba1d888/workspace/open/src/hotspot/share/gc/shared/space.cpp:157), pid=1856086, tid=1856098
      # assert(Universe::on_page_boundary(bottom) && Universe::on_page_boundary(end)) failed: invalid space boundaries
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0+16) (fastdebug build 21-ea+16-LTS-1318)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+16-LTS-1318, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, serial gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x16f99e8] Space::initialize(MemRegion, bool, bool)+0xc8
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S22444/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/89240b61-d427-4353-a6b3-39ea54044808/runs/6786bccb-f5f9-4089-aec1-a0806a9dc0aa/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_gc/scratch/1/core.1856086)
      #
      # An error report file with more information is saved as:
      # /opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S22444/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/89240b61-d427-4353-a6b3-39ea54044808/runs/6786bccb-f5f9-4089-aec1-a0806a9dc0aa/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_gc/scratch/1/hs_err_pid1856086.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      ];
       stderr: []
       exitValue = 134

      java.lang.RuntimeException: Expected to get exit value of [0], exit value is: [134]
      at jdk.test.lib.process.OutputAnalyzer.shouldHaveExitValue(OutputAnalyzer.java:490)
      at gc.arguments.TestMaxMinHeapFreeRatioFlags.positiveTest(TestMaxMinHeapFreeRatioFlags.java:103)
      at gc.arguments.TestShrinkHeapInSteps.main(TestShrinkHeapInSteps.java:51)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
      at java.base/java.lang.Thread.run(Thread.java:1623)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x0000ffff341a30f0): VMThread "VM Thread" [stack: 0x0000ffff3aad0000,0x0000ffff3acd0000] [id=1856098]

      Stack: [0x0000ffff3aad0000,0x0000ffff3acd0000], sp=0x0000ffff3accdf60, free space=2039k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x16f99e8] Space::initialize(MemRegion, bool, bool)+0xc8 (space.cpp:157)
      V [libjvm.so+0x16f9e04] ContiguousSpace::initialize(MemRegion, bool, bool)+0x14 (space.cpp:185)
      V [libjvm.so+0xabadd8] DefNewGeneration::compute_space_boundaries(unsigned long, bool, bool)+0x1d4 (defNewGeneration.cpp:459)
      V [libjvm.so+0xabbf4c] DefNewGeneration::compute_new_size()+0x1a8 (defNewGeneration.cpp:603)
      V [libjvm.so+0xdb2e3c] GenCollectedHeap::do_collection(bool, bool, unsigned long, bool, GenCollectedHeap::GenerationType)+0xb08 (genCollectedHeap.cpp:593)
      V [libjvm.so+0xdb36a8] GenCollectedHeap::satisfy_failed_allocation(unsigned long, bool)+0x68 (genCollectedHeap.cpp:654)
      V [libjvm.so+0xd99148] VM_GenCollectForAllocation::doit()+0x44 (gcVMOperations.cpp:179)
      V [libjvm.so+0x193b778] VM_Operation::evaluate()+0x158 (vmOperations.cpp:71)
      V [libjvm.so+0x19655e8] VMThread::evaluate_operation(VM_Operation*)+0x118 (vmThread.cpp:281)
      V [libjvm.so+0x1966ef8] VMThread::inner_execute(VM_Operation*)+0x4b8 (vmThread.cpp:428)
      V [libjvm.so+0x1967054] VMThread::loop()+0xc4 (vmThread.cpp:495)
      V [libjvm.so+0x196717c] VMThread::run()+0xc8 (vmThread.cpp:175)
      V [libjvm.so+0x1840a18] Thread::call_run()+0xf8 (thread.cpp:224)
      V [libjvm.so+0x1555c84] thread_native_entry(Thread*)+0x100 (os_linux.cpp:740)
      C [libpthread.so.0+0x7908] start_thread+0x188

            Assignee:
            Albert Yang
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: